# minix-ai-bot

./: .gitignore  README.md
backend/: .env.example  config.py  database.py  main.py  models.py  pyproject.toml  schemas.py
backend/apis/: __init__.py  auth.py  chat.py  user.py
backend/clients/: __init__.py  gllm.py
backend/llm_utils/: __init__.py  llm_prompt.py  llm_schema.py
backend/middleware/: __init__.py  security.py
backend/services/: __init__.py  auth.py  chat.py  llm.py  rag.py  user.py  utils.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/Auth/: Auth.css  Login.jsx  Signup.jsx
frontend/src/components/Chat/: Chat.css  Chat.jsx  ChatSidebar.css  ChatSidebar.jsx  EmotionalFeedback.css  InputBar.css  TypingIndicator.jsx
frontend/src/components/Settings/: Settings.jsx
frontend/src/components/UI/: AnimatedBackground.jsx  GlassCard.jsx
frontend/src/context/: AppContext.jsx
frontend/src/services/: api.js
frontend/src/utils/: emotions.js  responses.js
minix/: index.html
minix/src/: App.css
minix/src/components/Auth/: Auth.css  Login.jsx  Signup.jsx
minix/src/components/Chat/: Chat.css  ChatSidebar.css  EmojiPicker.css  EmojiPicker.jsx  EmotionalFeedback.jsx  InputBar.jsx  Message.css  Message.jsx  TypingIndicator.css
minix/src/components/Onboarding/: Onboarding.css  Onboarding.jsx
minix/src/components/Settings/: Settings.css  Settings.jsx
minix/src/context/: AppContext.jsx
minix/src/hooks/: useScrollToBottom.js
minix/src/utils/: storage.js
