[project]
name = "minix-ai"
version = "0.1.0"
description = "MiniX AI Chatbot"
authors = [
    {name = "Prawin Sanjai K"}
]
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "fastapi (>=0.136.1,<0.137.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "sqlalchemy-utils (>=0.42.1,<0.43.0)",
    "cryptography (>=48.0.0,<49.0.0)",
    "psycopg2 (>=2.9.12,<3.0.0)",
    "pydantic-core (>=2.46.4,<3.0.0)",
    "google-generativeai (>=0.8.6,<0.9.0)",
    "google-genai (>=2.1.0,<3.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "pgvector (>=0.3.0,<1.0.0)",
    "fastembed (>=0.3.0,<1.0.0)",
    "pydantic[email] (>=2.13.4,<3.0.0)",
    "passlib[bcrypt] (==1.7.4)",
    "bcrypt (==4.0.1)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
